[package]
name = "musicrenderer_rust"
version = "0.1.0"
authors = ["Christian F. Coors <ccoors@uni-bremen.de>"]

[dependencies]
libc = "0.2.29"
log = "0.3.8"
env_logger = "0.3"
structopt = "0.1.0"
structopt-derive = "0.1.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
ghakuf = "0.3.2"

fluidsynth_bindgen = { path = "../fluidsynth_bindgen" }
